--- a/src/styles/Settings.css
+++ b/src/styles/Settings.css
@@ -93,7 +93,11 @@
 .settings .content-scroller {
   overflow: hidden auto;
   height: 100%;
-  position: static;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
